--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,32 @@
+@use 'hero';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto,sans-serif;
+    color: #fff;
+}
+
 body {
-    background-color: rgb(22, 168, 173);
+    background-color: rgb(63, 118, 207);
+    
+}
+
+.container {
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
+
+    @media(max-width:640px) {
+        max-width: 80%;
+        
+    }
+
+    // tablet tela menores
+
+    @media(max-width:1024px){
+        max: width 90%; 
+    }
+
 }
