--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use 'hero';
+@use'components/infos_bar';
+@use'components/buttons';
 
 * {
     margin: 0;
@@ -6,27 +8,26 @@
     box-sizing: border-box;
     font-family: Roboto,sans-serif;
     color: #fff;
+    list-style: none;
 }
 
-body {
-    background-color: rgb(63, 118, 207);
-    
-}
 
 .container {
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
 
+     // tablet e  telas menores
+
+     @media(max-width:1024px){
+        max: width 90%; 
+    }
+
     @media(max-width:640px) {
         max-width: 80%;
         
     }
 
-    // tablet tela menores
-
-    @media(max-width:1024px){
-        max: width 90%; 
-    }
+   
 
 }
