criando a contagem regressiva

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,5 @@
+@use '../variables';
+
 .button {
     padding: 12px;
     font-size: 18px;
@@ -8,8 +10,8 @@
     display: inline-block; /* Certifique-se de que o botão seja exibido como um bloco inline */
 
     &--primary {
-        color: #fff;
-        background-color: #4f2ac3;
+        color:variables.$textColor;
+        background-color: variables.$purple;
     }
 
     @media (max-width: 640px) {
